--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
-    <link href="/styles/index.css" rel="stylesheet">
+    <title>Steam Web Application</title>
 </head>
 <body>
+    <noscript>JavaScriptを有効にしてください。</noscript>
     <div id="root"></div>
-    <script src="/index.js"></script>
 </body>
 </html>
